Update 'xr97ovpao-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f2ad1a8778.aygh.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:c1831dc890e3e4b723537c8aa2b95551f5b0ddc1@sha256:a8225b5d72ae86bd2cebe725dacd2ff8769397354ae6f69a2fcf1da0675c1ec3

--- a/components/xr97ovpao-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/xr97ovpao-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xr97ovpao-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f2ad1a8778.aygh.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:c1831dc890e3e4b723537c8aa2b95551f5b0ddc1@sha256:a8225b5d72ae86bd2cebe725dacd2ff8769397354ae6f69a2fcf1da0675c1ec3
+          name: container-image
